# ig_sponsorship_detection

./: .gitignore  README.md  pyproject.toml
scripts/: build_graph.py  draw_architecture.py  draw_heterograph.py  precompute_embeddings.py
src/: config.py  losses.py  metrics.py  train.py
src/data/: graph_builder.py  graph_dataset.py  image_dataset.py  linear_dataset.py  post_parser.py  splits.py  text_dataset.py
src/models/: fusion.py  graph_encoder.py  image_encoder.py  spod.py  text_encoder.py
